[package]
authors = ["meyhem <meyhem@protonmail.com>"]
edition = "2018"
name = "looger"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
chrono = {version = "0.4", features = ["serde"]}
config = "0.10"
rocket = "0.4.6"
rocket_contrib = "0.4"
serde = {version = "1.0", features = ["derive"]}
sled = "0.34.6"
